manifests/reciprocity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reciprocity-app
  labels:
    app: reciprocity-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
